--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.14.4
+* FIKO 🐸 v0.15.0
 * 2024 CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
@@ -13,7 +13,7 @@
 */
 
 /* 🐲 LAYER ORDER */
-@layer reset, root, base, roles, toggle, containers, components, classes, animations, tests;
+@layer reset, root, base, roles, containers, components, classes, animations, tests;
 
 /* 🐲 RESET */
 @layer reset {
@@ -510,13 +510,19 @@
   }
 
   :where(dl, ol, ul) :where(dl, ol, ul) {
-    margin-inline: 0;
+    margin-inline: var(--spaceLR) 0;
     margin-block-start: calc(var(--spaceTB) * 0.25);
     margin-block-end: 0;
   }
 
-  ul li {
-    list-style: square;
+  /* LIST */
+  ul,
+  ol {
+    list-style: inside;
+  }
+  ol {
+    list-style: inside;
+    list-style-type: revert;
   }
 
   mark {
@@ -886,33 +892,6 @@
   [role='button'][aria-busy='true'],
   a[aria-busy='true'] {
     pointer-events: none;
-  }
-}
-
-/* 🐲 TOGGLE */
-@layer toggle {
-  .theme_switch {
-    position: relative;
-    top: 4px;
-    z-index: 1000;
-    line-height: 1;
-
-    :hover svg {
-      color: var(--curCOLa);
-      cursor: pointer;
-    }
-
-    [data-theme='dark'] & {
-      .moon {
-        display: none;
-      }
-    }
-
-    [data-theme='light'] & {
-      .sun {
-        display: none;
-      }
-    }
   }
 }
 
@@ -1425,7 +1404,7 @@
       :active,
       :focus
     ) {
-    opacity: 0.85;
+    opacity: 0.75;
   }
 
   [type='submit'],
@@ -1653,12 +1632,6 @@
     padding-inline: 0;
   }
 
-  /* LIST */
-  ul,
-  ol {
-    list-style-type: none;
-  }
-
   /* CARD */
   /* USE: <article> */
 
@@ -1733,6 +1706,33 @@
 
   article:has(> img:first-child) {
     padding-block-start: 0;
+  }
+
+  /* TOGGLE THEME */
+  /* This now uses JS. Maybe will become a css only toggle */
+
+  .theme_switch {
+    position: relative;
+    top: 4px;
+    z-index: 100;
+    line-height: 1;
+
+    :hover svg {
+      color: var(--curCOLa);
+      cursor: pointer;
+    }
+
+    [data-theme='dark'] & {
+      .moon {
+        display: none;
+      }
+    }
+
+    [data-theme='light'] & {
+      .sun {
+        display: none;
+      }
+    }
   }
 }
 
