--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.15.0
+* FIKO 🐸 v0.15.1
 * 2024 CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
@@ -513,6 +513,16 @@
     margin-inline: var(--spaceLR) 0;
     margin-block-start: calc(var(--spaceTB) * 0.25);
     margin-block-end: 0;
+  }
+
+  :where(a:not([role='button'])),
+  [role='link'] {
+    text-decoration: underline;
+    text-underline-offset: 0.125em;
+    text-decoration-color: currentColor;
+    &:hover {
+      opacity: 0.85;
+    }
   }
 
   /* LIST */
