--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.15.1
+* FIKO 🐸 v0.15.2
 * 2024 CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
@@ -216,27 +216,27 @@
   /* INITIALS ASSUMING LIGHT THEME */
   [data-theme='light'] {
     /* Set the CURRENT colours: */
-    --curBG: var(--color-white);
-    --curTXT: var(--color-black);
+    --currentBGcolor: var(--color-white);
+    --currentTXTcolor: var(--color-black);
     --curV: var(--icon-chevron-black);
     --curPlus: var(--icon-plus-black);
     --curMinus: var(--icon-minus-black);
     /* Seems that the following is needed to make it work?!? */
-    background-color: var(--curBG);
-    color: var(--curTXT);
+    background-color: var(--currentBGcolor);
+    color: var(--currentTXTcolor);
   }
 
   /* DATA-THEME IS SET TO DARK */
   [data-theme='dark'] {
     /* Set the CURRENT colours: */
-    --curBG: var(--color-black);
-    --curTXT: var(--color-white);
+    --currentBGcolor: var(--color-black);
+    --currentTXTcolor: var(--color-white);
     --curV: var(--icon-chevron-white);
     --curPlus: var(--icon-plus-white);
     --curMinus: var(--icon-minus-white);
     /* Seems that the following is needed to make it work?!? */
-    background-color: var(--curBG);
-    color: var(--curTXT);
+    background-color: var(--currentBGcolor);
+    color: var(--currentTXTcolor);
   }
 
   /* SECTION 3 */
@@ -246,7 +246,7 @@
     --color-light: var(--color-white);
     --color-dark: var(--color-black);
     --transparent: 50%;
-    --curCOLa: color-mix(
+    --currentCOLtransparent: color-mix(
       in srgb,
       currentColor,
       transparent var(--transparent)
@@ -258,7 +258,7 @@
     --radius: clamp(6.66px, 1svw, 8px); /* RADIUS */
     --lineHeight: 1.55; /* LINE HEIGHT */
     --lineHeightHeadings: 1.1; /* COMPACTED LINE HEIGHT FOR HEADINGS*/
-    --borderS: clamp(1.5px, 1svw, 2px); /* BORDER SIZE */
+    --borderSize: clamp(1.5px, 1svw, 2px); /* BORDER SIZE */
     --gap: calc((var(--spaceLR) + var(--spaceTB)) / 3);
     --transition: 0.2s ease-in-out;
 
@@ -287,7 +287,9 @@
     /* LONG TEXT LINES ARE HARD TO READ */
     --reading: 60ch;
 
-    --modal-overlay-backdrop-filter: var(--curCOLa);
+    --modal-overlay-backdrop-filter: var(
+      --currentCOLtransparent
+    );
 
     /* breakpoints, boostrap++ */
     --xs: 0;
@@ -321,6 +323,8 @@
 @layer base {
   html {
     font-size: 16px;
+    text-rendering: optimizeLegibility;
+    overflow-wrap: break-word;
     scroll-behavior: smooth;
     line-height: var(--lineHeight);
   }
@@ -338,8 +342,12 @@
   }
 
   small {
-    font-size: 75%;
+    font-size: 0.825em;
     line-height: var(--lineHeight);
+  }
+
+  main {
+    display: block;
   }
 
   /* TYPOGRAPHY */
@@ -378,7 +386,7 @@
   ul {
     margin-block-start: 0;
     margin-block-end: var(--spaceTB);
-    color: var(--curTXT);
+    color: var(--currentTXTcolor);
     font-style: normal;
     font-weight: var(--font-weight);
   }
@@ -395,7 +403,7 @@
   .h5,
   h6,
   .h6 {
-    color: var(--curTXT);
+    color: var(--currentTXTcolor);
     font-weight: var(--font-weight);
     font-size: var(--font-size);
     line-height: var(--lineHeightHeadings);
@@ -539,7 +547,7 @@
     padding-block: 0.125rem;
     padding-inline: 0.25rem;
     background-color: orange;
-    color: var(--curTXT);
+    color: var(--currentTXTcolor);
     vertical-align: baseline;
   }
 
@@ -551,14 +559,14 @@
     padding-block: var(--spaceTB);
     padding-inline: var(--spaceLR);
     border-right: none;
-    border-inline-start: var(--borderS) solid
+    border-inline-start: var(--borderSize) solid
       color-mix(in srgb, currentColor, transparent 50%);
     border-inline-end: none;
   }
 
   blockquote footer {
     margin-block-start: calc(var(--spaceTB) * 0.5);
-    color: var(--curTXT);
+    color: var(--currentTXTcolor);
     overflow-x: hidden;
     max-width: 100%;
   }
@@ -570,20 +578,20 @@
   }
 
   ins {
-    color: var(--curCOLa);
+    color: var(--currentCOLtransparent);
     text-decoration: none;
   }
 
   del {
-    color: var(--curCOLa);
+    color: var(--currentCOLtransparent);
   }
 
   ::-moz-selection {
-    background-color: var(--curCOLa);
+    background-color: var(--currentCOLtransparent);
   }
 
   ::selection {
-    background-color: var(--curCOLa);
+    background-color: var(--currentCOLtransparent);
   }
 
   /* CODE */
@@ -611,7 +619,7 @@
     --code-background-color: rgba(133, 133, 133, 0.5);
     border-radius: var(--radius);
     background-color: var(--code-background-color);
-    color: var(--curTXT);
+    color: var(--currentTXTcolor);
     font-weight: var(--font-weight);
     line-height: initial;
     border-radius: 3px;
@@ -911,8 +919,8 @@
   nav,
   section,
   footer {
-    /* background-color: var(--curBG); */
-    color: var(--curTXT);
+    /* background-color: var(--currentBGcolor); */
+    color: var(--currentTXTcolor);
   }
 
   /* NAV */
@@ -960,7 +968,10 @@
     border-radius: var(--radius);
   }
 
-  nav li :where(a, [role='link']):not(:hover) {
+  /* no underline in the following cases */
+  nav li :where(a, [role='link']):not(:hover),
+  a:has(.card),
+  a:has(h1, h2, h3, h4, h5, h6, svg) {
     text-decoration: none;
   }
 
@@ -979,7 +990,7 @@
     margin-inline: inherit;
     margin-block-end: 0;
     padding: calc(var(--spaceTB) / 1.6) calc(var(--spaceLR));
-    border: var(--borderS) solid var(--curTXT);
+    border: var(--borderSize) solid var(--currentTXTcolor);
   }
 
   nav[aria-label='breadcrumb'] {
@@ -1000,7 +1011,7 @@
     -webkit-margin-start: calc(var(--spaceLR) / 2);
     margin-inline-start: calc(var(--spaceLR) / 2);
     content: var(--nav-breadcrumb-divider);
-    color: var(--curCOLa);
+    color: var(--currentCOLtransparent);
     text-align: center;
     text-decoration: none;
   }
@@ -1024,9 +1035,10 @@
   td {
     padding: calc(var(--spaceTB) / 2) var(--spaceLR);
     width: fit-content;
-    border-bottom: var(--curCOLa) solid var(--borderS);
-    background-color: var(--curBG);
-    color: var(--curTXT);
+    border-bottom: var(--currentCOLtransparent) solid
+      var(--borderSize);
+    background-color: var(--currentBGcolor);
+    color: var(--currentTXTcolor);
     font-weight: var(--font-weight);
     text-align: left;
     text-align: start;
@@ -1034,7 +1046,8 @@
 
   tfoot th,
   tfoot td {
-    border-top: var(--curCOLa) solid var(--borderS);
+    border-top: var(--currentCOLtransparent) solid
+      var(--borderSize);
     border-bottom: 0;
     font-weight: 500;
   }
@@ -1163,7 +1176,7 @@
     figcaption {
       padding-block: var(--spaceTB);
       padding-inline: var(--spaceLR);
-      color: var(--curCOLa);
+      color: var(--currentCOLtransparent);
     }
 
     figcaption::first-letter {
@@ -1188,10 +1201,10 @@
     align-items: center;
     justify-content: center;
     border: 0;
-    -webkit-backdrop-filter: var(--curCOLa);
+    -webkit-backdrop-filter: var(--currentCOLtransparent);
     backdrop-filter: var(--modal-overlay-backdrop-filter);
-    background-color: var(--curCOLa);
-    color: var(--curBG);
+    background-color: var(--currentCOLtransparent);
+    color: var(--currentBGcolor);
     filter: invert(1);
   }
 
@@ -1201,8 +1214,8 @@
     margin-block: var(--spaceTB);
     margin-inline: var(--spaceLR);
     overflow: auto;
-    background-color: var(--curTXT);
-    color: var(--curBG);
+    background-color: var(--currentTXTcolor);
+    color: var(--currentBGcolor);
   }
 
   @media (min-width: 576px) {
@@ -1364,10 +1377,10 @@
     display: inline-block;
     padding: calc(var(--spaceTB) / 1.6)
       calc(var(--spaceLR) / 1.6);
-    border: var(--borderS) solid var(--curTXT);
+    border: var(--borderSize) solid var(--currentTXTcolor);
     border-radius: var(--radius);
     outline: none;
-    color: var(--curTXT);
+    color: var(--currentTXTcolor);
     font-weight: var(--font-weight);
     font-size: var(--font-size);
     line-height: var(--lineHeight);
@@ -1460,9 +1473,8 @@
       :active,
       :focus
     ) {
-    --curCOLa: var(--curCOLa);
-    --background-color: var(--curBG);
-    color: var(--curTXT);
+    --background-color: var(--currentBGcolor);
+    color: var(--currentTXTcolor);
   }
 
   /* .full */
@@ -1473,9 +1485,9 @@
       [role='button']
     ).full,
   [type='reset'].full {
-    border: var(--borderS) solid currentColor;
-    background-color: var(--curTXT);
-    color: var(--curBG);
+    border: var(--borderSize) solid currentColor;
+    background-color: var(--currentTXTcolor);
+    color: var(--currentBGcolor);
   }
 
   :is(
@@ -1521,10 +1533,10 @@
     display: block;
     padding-block: var(--spaceTB);
     list-style: none;
-    border-top: var(--borderS) solid currentColor;
+    border-top: var(--borderSize) solid currentColor;
   }
   details:last-child {
-    border-bottom: var(--borderS) solid currentColor;
+    border-bottom: var(--borderSize) solid currentColor;
   }
 
   summary {
@@ -1537,7 +1549,7 @@
     align-items: center;
 
     &:not([role]) {
-      color: var(--curTXT);
+      color: var(--currentTXTcolor);
     }
 
     /* EXPOSE STATUS TO DOM: Closed */
@@ -1581,7 +1593,7 @@
     position: -webkit-sticky !important;
     /* Safari */
     position: sticky;
-    background-color: var(--curBG);
+    background-color: var(--currentBGcolor);
     top: 0;
 
     /* EXPOSE STATUS TO DOM: Open  */
@@ -1619,7 +1631,7 @@
   }
 
   details[open] > summary:not([role]):not(:focus) {
-    color: var(--curTXT);
+    color: var(--currentTXTcolor);
   }
 
   /* HEADINGS, P, SPAN */
@@ -1728,7 +1740,7 @@
     line-height: 1;
 
     :hover svg {
-      color: var(--curCOLa);
+      color: var(--currentCOLtransparent);
       cursor: pointer;
     }
 
@@ -1764,7 +1776,9 @@
       position: sticky;
       top: 10px;
       z-index: 9999;
-      background-color: var(--curCOLa) !important;
+      background-color: var(
+        --currentCOLtransparent
+      ) !important;
       backdrop-filter: blur(10px);
       height: fit-content;
     }
@@ -1788,7 +1802,7 @@
     }
 
     .border {
-      border: var(--borderS) solid
+      border: var(--borderSize) solid
         color-mix(in srgb, currentColor, transparent 50%);
       border-radius: var(--radius);
 
@@ -1846,8 +1860,8 @@
       /* filter: invert(100%);
       -webkit-backdrop-filter: hue-rotate(180deg);
       backdrop-filter: hue-rotate(180deg); */
-      color: var(--curBG);
-      background-color: var(--curTXT);
+      color: var(--currentBGcolor);
+      background-color: var(--currentTXTcolor);
     }
 
     .full_window {
