--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.15.2
+* FIKO 🐸 v0.16.0
 * 2024 CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
@@ -253,9 +253,9 @@
     );
 
     /* DYNAMIC / RELATIVE SIZED spacing & borders */
-    --spaceLR: 3.3svw; /* LEFT RIGHT */
-    --spaceTB: 1.8svh; /* TOP BOTTOM */
-    --radius: clamp(6.66px, 1svw, 8px); /* RADIUS */
+    --spaceLR: 3svw; /*  LEFT RIGHT */
+    --spaceTB: 1.5svh; /* TOP BOTTOM */
+    --radius: clamp(5px, 1svw, 8px); /* RADIUS */
     --lineHeight: 1.55; /* LINE HEIGHT */
     --lineHeightHeadings: 1.1; /* COMPACTED LINE HEIGHT FOR HEADINGS*/
     --borderSize: clamp(1.5px, 1svw, 2px); /* BORDER SIZE */
@@ -279,7 +279,11 @@
       monospace, var(--font-family-emoji);
 
     /* VARIABLE BASE FONT SIZE */
-    --font-size: clamp(1rem, 1.1rem + 0.418svw, 1.8rem);
+    --font-size: clamp(
+      1.15rem,
+      0.825rem + 1.3684vw,
+      1.8rem
+    );
 
     --font-weight: 300;
     --font-weight-bold: 500;
@@ -290,6 +294,8 @@
     --modal-overlay-backdrop-filter: var(
       --currentCOLtransparent
     );
+
+    --breadcrumb-divider: '>';
 
     /* breakpoints, boostrap++ */
     --xs: 0;
@@ -924,20 +930,20 @@
   }
 
   /* NAV */
-  /* :where(nav li)::before {
-        float: left;
-        content: '​';
-      } */
+
+  :where(nav li)::before {
+    float: left;
+    content: '​';
+  }
 
   nav,
   nav ul {
-    padding-inline: calc(var(--spaceLR) * 2);
-    gap: var(--gap);
-    margin: 0;
+    display: flex;
   }
 
   nav {
-    width: 100%;
+    justify-content: space-between;
+    overflow: visible;
   }
 
   nav ol,
@@ -950,25 +956,32 @@
 
   nav ol:first-of-type,
   nav ul:first-of-type {
-    margin-inline-start: var(--spaceLR);
+    margin-left: calc(var(--spaceLR) * -1);
   }
 
   nav ol:last-of-type,
   nav ul:last-of-type {
-    margin-inline-end: var(--spaceLR);
+    margin-right: calc(var(--spaceLR) * -1);
   }
 
   nav li {
     display: inline-block;
     margin: 0;
+    /* maybe needs some padding here?! like: */
+    padding: var(--spaceTB) var(--spaceLR);
+    /* then zero it when has link */
   }
 
   nav li :where(a, [role='link']) {
     display: inline-block;
     border-radius: var(--radius);
+    /* zero it cos it has link */
+    margin: calc(var(--spaceTB) * -1)
+      calc(var(--spaceLR) * -1);
+    padding: var(--spaceTB) var(--spaceLR);
   }
 
-  /* no underline in the following cases */
+  /* NO UNDERLINE IN THE FOLLOWING CASES */
   nav li :where(a, [role='link']):not(:hover),
   a:has(.card),
   a:has(h1, h2, h3, h4, h5, h6, svg) {
@@ -989,34 +1002,52 @@
     height: auto;
     margin-inline: inherit;
     margin-block-end: 0;
-    padding: calc(var(--spaceTB) / 1.6) calc(var(--spaceLR));
-    border: var(--borderSize) solid var(--currentTXTcolor);
+    padding: calc(var(--spaceTB) - var(--borderSize) * 2)
+      var(--spaceLR);
+    /* border: var(--borderSize) solid var(--currentTXTcolor); */
   }
+
+  /* BREADCRUMBS */
 
   nav[aria-label='breadcrumb'] {
     align-items: center;
-    justify-content: flex-start;
+    justify-content: start;
   }
 
   nav[aria-label='breadcrumb'] ul li:not(:first-child) {
-    -webkit-margin-start: var(--spaceLR);
     margin-inline-start: var(--spaceLR);
+  }
+
+  nav[aria-label='breadcrumb'] ul li:last-child {
+    padding: 0;
+  }
+
+  nav[aria-label='breadcrumb'] ul {
+    padding-left: var(--spaceLR);
+  }
+
+  nav[aria-label='breadcrumb'] ul li a {
+    margin: calc(var(--spaceTB) * -1) 0;
+    margin-inline-start: calc(var(--spaceLR) * -1);
+    padding: 0;
   }
 
   nav[aria-label='breadcrumb']
     ul
     li:not(:last-child)::after {
+    display: inline-block;
     position: absolute;
-    width: calc(var(--spaceLR) * 2);
-    -webkit-margin-start: calc(var(--spaceLR) / 2);
-    margin-inline-start: calc(var(--spaceLR) / 2);
-    content: var(--nav-breadcrumb-divider);
+    width: calc(var(--spaceLR) * 4);
+    margin: 0 calc(var(--spaceLR) * -1);
+    content: var(--breadcrumb-divider);
     color: var(--currentCOLtransparent);
     text-align: center;
     text-decoration: none;
+    white-space: nowrap;
   }
 
-  nav[aria-label='breadcrumb'] a[aria-current] {
+  nav[aria-label='breadcrumb']
+    a[aria-current]:not([aria-current='false']) {
     background-color: transparent;
     color: inherit;
     text-decoration: none;
@@ -1797,6 +1828,7 @@
 
     .hero {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: center;
     }
